--- a/index.html
+++ b/index.html
@@ -1,49 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="OMSCS 6460 Education Technology : Course Library">
+    <title>OMSCS 6460 Education Technology by lvollherbst3</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>OMSCS 6460 Education Technology</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>OMSCS 6460 Education Technology</h1>
+        <p>Course Library</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.gatech.edu/lvollherbst3/omscs6460-course-library">View on GitHub</a>
+        <p class="view"><a href="https://github.gatech.edu/lvollherbst3/omscs6460-course-library">View the Project on GitHub <small>lvollherbst3/omscs6460-course-library</small></a></p>
 
-          <h1 id="project_title">OMSCS 6460 Education Technology</h1>
-          <h2 id="project_tagline">Course Library</h2>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>
 <a id="welcome-to-the-omscs-6460-education-technology-course-library" class="anchor" href="#welcome-to-the-omscs-6460-education-technology-course-library" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the OMSCS 6460 Education Technology Course Library!</h3>
 
 <h3>
 <a id="more-coming-soon" class="anchor" href="#more-coming-soon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>More coming soon!</h3>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">OMSCS 6460 Education Technology maintained by <a href="https://github.gatech.edu/lvollherbst3">lvollherbst3</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.gatech.edu/lvollherbst3">lvollherbst3</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
