--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p>Course Library</p>
 
         <p class="view"><a href="https://github.gatech.edu/lvollherbst3/omscs6460-course-library">View the Project on GitHub <small>lvollherbst3/omscs6460-course-library</small></a></p>
-
+        
+        <a id="appendix" href="./Appendices.md">Appendices</a>
 
       </header>
       <section>
