--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>OMSCS 6460 Education Technology</h1>
-        <p>Course Library Test</p>
+        <p>Course Library</p>
 
         <p class="view"><a href="https://github.gatech.edu/lvollherbst3/omscs6460-course-library">View the Project on GitHub <small>lvollherbst3/omscs6460-course-library</small></a></p>
         
